[FRONT-END] Styling and scrollbar fixes

--- a/frontend/src/app/game/game-cockpit/containers/game-cockpit/game-cockpit.component.scss
+++ b/frontend/src/app/game/game-cockpit/containers/game-cockpit/game-cockpit.component.scss
@@ -1,3 +1,5 @@
+@import 'src/styles/breakpoints';
+
 .player-cockpit {
   & &__velocity {
     color: var(--card-text-color);
@@ -11,7 +13,7 @@
     position: absolute;
     right: 0;
     text-align: right;
-    top: 60px;
+    top: 40px;
     width: fit-content;
   }
 
@@ -68,4 +70,14 @@
   position: absolute;
   right: 0;
   top: 0;
+}
+
+@include media-breakpoint-down(sm) {
+  .player-cockpit {
+    & &__compass,
+    & &__airports,
+    & &__players-summary {
+      display: none;
+    }
+  }
 }
