--- a/frontend/src/app/game/game-intro/containers/game-intro/game-intro.component.scss
+++ b/frontend/src/app/game/game-intro/containers/game-intro/game-intro.component.scss
@@ -19,7 +19,7 @@
 
   & &__content {
     flex-grow: 1;
-    overflow: auto;
+    overflow-y: auto;
     padding: 0.6rem 1.2rem 1.2rem;
   }
 
