--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -13,12 +13,12 @@
   --card-text-color: #dddee1;
   --button-text-color: #000;
   --card-shadow-color: #0b0b0b;
-  --card-background-color: rgb(0 0 0 / 40%);
-  --card-background-light-color: rgb(255 255 255 / 7%);
-  --card-background-lighter-color: rgb(0 0 0 / 20%);
-  --card-background-medium-color: rgb(0 0 0 / 60%);
-  --card-background-darker-color: rgb(0 0 0 / 80%);
-  --card-background-darkest-color: rgb(0 0 0 / 100%);
+  --card-background-color: rgb(6 14 21 / 40%);
+  --card-background-light-color: rgb(100 100 100 / 7%);
+  --card-background-lighter-color: rgb(4 10 13 / 20%);
+  --card-background-medium-color: rgb(4 10 13 / 60%);
+  --card-background-darker-color: rgb(4 10 13 / 80%);
+  --card-background-darkest-color: rgb(4 10 13 / 100%);
   --compass-arrow-color: #f61a1a;
 }
 
